cmake_minimum_required(VERSION 3.4)
project(pkcs11-ecdh C)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
find_package(PkgConfig REQUIRED)
pkg_check_modules(P11-KIT REQUIRED p11-kit-1)
include_directories(${P11-KIT_INCLUDE_DIRS})
#add_compile_options(-fsanitize=address -fsanitize=undefined -fno-sanitize-recover=all -fsanitize=float-divide-by-zero -fsanitize=float-cast-overflow -fno-sanitize=null -fno-sanitize=alignment)
#add_link_options(-fsanitize=address -fsanitize=undefined -fno-sanitize-recover=all -fsanitize=float-divide-by-zero -fsanitize=float-cast-overflow -fno-sanitize=null -fno-sanitize=alignment)
add_executable(encrypt encrypt.c)
target_link_libraries(encrypt crypto ${P11-KIT_LIBRARIES} )
add_executable(decrypt decrypt.c)
target_link_libraries(decrypt crypto ${P11-KIT_LIBRARIES})